--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 C:/Documents/Code/HITsz-CS/COMP2007[[:space:]]Design[[:space:]]and[[:space:]]Analysis[[:space:]]of[[:space:]]Algorithms[[:space:]]2023[[:space:]]Fall/slides/ch5.pdf filter=lfs diff=lfs merge=lfs -text
 C:/Documents/Code/HITsz-CS/COMP2007[[:space:]]Design[[:space:]]and[[:space:]]Analysis[[:space:]]of[[:space:]]Algorithms[[:space:]]2023[[:space:]]Fall/slides/ch6.pdf filter=lfs diff=lfs merge=lfs -text
+C:/Documents/Code/HITsz-CS/COMP2007[[:space:]]Design[[:space:]]and[[:space:]]Analysis[[:space:]]of[[:space:]]Algorithms[[:space:]]2023[[:space:]]Fall/slides/ch5.pdf filter=lfs diff=lfs merge=lfs -text
+C:/Documents/Code/HITsz-CS/COMP2007[[:space:]]Design[[:space:]]and[[:space:]]Analysis[[:space:]]of[[:space:]]Algorithms[[:space:]]2023[[:space:]]Fall/slides/ch6.pdf filter=lfs diff=lfs merge=lfs -text
